--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 	<body>
 		<main>
-			<canvas id="myCanvas"></canvas>
+			<canvas id="myCanvas" width="500" height="500"></canvas>
+			<button id="start">Start</button>
 		</main>
 	</body>
 </html>
